# mcp-codebase-analyser

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.md  cursor_config.json  docker-compose.yml  env.example  pyproject.toml  run_me.sh  test_setup.sh
src/: code_parser.py  embedding_system.py  main.py  recommendation_system.py  repo_fetcher.py  utils.py
